2004-01-30  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Mustek BearPaw 4800TA Pro II.

2004-01-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/mustek_scsi_pp.c: Use gettimeofday() instead of
	ftime(). Bug #300482.

2004-01-21  Gerhard Jaeger <gerhard@gjaeger.de>
	* backend/test.c: reader_process terminates now, when running as
	  thread.
	* backend/u12.c backend/u12-hw.c backend/u12-if.c backend/u12-io.c
	  backend/u12-map.c backend/u12-motor.c backend/u12-shading.c
	  backend/u12-tpa.c backend/u12.h backend/u12.conf: major update, compilation
	  fixes.

2004-01-19  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/u12/U12.changes: update.
	* doc/u12/U12.todo: initial checkin.
	* backend/plustek-usb.c: cleanup.
	* backend/u12.c backend/u12-ccd.c backend/u12-hw.c backend/u12-if.c
	  backend/u12-image.c backend/u12-io.c: activated cancel function,
	  added lamp off timer function, cleanup, stability fixes.

2004-01-19  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES: Debug options are only enabled if the
	  debug level is 1 and higher. Added product id 0x0402 for Plustek U16B.

2004-01-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/gamma4scanimage.man: scanimage is in section 1.
	* doc/descriptions/unsupported.desc: Added Lexmark X74.

2004-01-15  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp.c, backend/mustek_pp_cis.c: Bug fix: make sure
	  that the child process releases the parallel port under all
	  circumstances. Otherwise, the parent process may no longer be
	  able to control the scanner and the lamp stays on and doesn't
	  return home.

2004-01-15  Gerard Klaver <gerard at gkall dot hobby dot nl>

	* include/sane/saneopts.h: Added options WHITE_LEVEL_R, WHITE_LEVEL_G,
	                           and WHITE_LEVEL_B.